Fixed again wrong background for checkboxes and radios in IE7 part of bug # 769
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/phpsurveyor@2708 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -93,10 +93,10 @@ td {
 	font-size: 11px;
 }
 .checkboxbtn {
-	background-color: #BBBBBB;
+	background-color: transparent;
 }
 .radiobtn {
-	background-color: #BBBBBB;
+	background-color: transparent;
 }
 input, select {
 	color: #000080;
